# pygen-structures

./: CONTRIBUTING.md  README.md  pyproject.toml
pygen_structures/: __init__.py  __main__.py  _functions_const.py  _typing.py  charmm_containers.py  convenience_functions.py
pygen_structures/mol_containers/: atom.py  molecule.py  structure.py
