[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "pygen-structures"
version = "0.2.6"
description = "3D molecular structure generation for MD simulation"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Travis Hesketh", email = "travis@hesketh.scot" },
]
requires-python = ">=3.9"
dependencies = [
    "numpy",
    "rdkit",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Chemistry",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/thesketh/pygen-structures"

[project.scripts]
pygen-structures = "pygen_structures.__main__:main"

[tool.setuptools.packages.find]
include = ["pygen_structures*"]

[tool.setuptools.package-data]
pygen_structures = [
    "toppar/**/*",
    "test/**/*",
]
